--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,7 @@ hr {
     width: 35%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
